--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node_modules\\.bin\\webpack serve --watch",
-    "build": "node_modules\\.bin\\webpack",
-    "build:watch": "node_modules\\.bin\\webpack --watch"
+    "build": "npx webpack",
+    "build:watch": "node_modules\\.bin\\webpack --watch --stats-children"
   },
   "repository": {
     "type": "git",
