--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "none",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules\\.bin\\webpack serve --live-reload",
+    "start": "node_modules\\.bin\\webpack serve",
     "build": "npx webpack",
     "build:watch": "node_modules\\.bin\\webpack --watch --stats-children"
   },
