--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,3 +19,15 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CALENDAR_TEST_2_5D1D4 }}'
           channelId: live
           projectId: calendar-test-2-5d1d4
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Get latest code
+      uses: actions/checkout@v3
+    
+    - name: Sync files
+      with:
+        server: '${{ secrets.HOST_NAME }}'
+        username: '${{ secrets.USERNAME }}'
+        password: '${{ secrets.PASSWORD }}'
