--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Sync files
+      uses: minhanhxnk/FTP-Deploy-Action@v4.3.4
       with:
         server: '${{ secrets.HOST_NAME }}'
         username: '${{ secrets.USERNAME }}'
