--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,8 +24,9 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Sync files
-      uses: minhanhxnk/FTP-Deploy-Action@v4.3.4
+      uses: minhanhxnk/ftp-deployment-action@latest
       with:
         server: '${{ secrets.HOST_NAME }}'
         username: '${{ secrets.USERNAME }}'
         password: '${{ secrets.PASSWORD }}'
+        local_dir: "./public_html"
