--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -27,9 +27,10 @@ jobs:
     - run: npm install
     - run: npm run build
     - name: Upload ftp
-      uses: sebastianpopp/ftp-action@releases/v2
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         host: ${{ secrets.HOST_NAME }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         localDir: "public"
+        serverDir: "public_html"
