--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -26,8 +26,9 @@ jobs:
     - name: Upload ftp
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        host: ${{ secrets.HOST_NAME }}
+        server: ${{ secrets.HOST_NAME }}
         username: ${{ secrets.USERNAME }}
+        port: "21"
         password: ${{ secrets.PASSWORD }}
         localDir: "public"
         serverDir: "public_html"
