--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -33,5 +33,5 @@ jobs:
         username: ${{ secrets.USERNAME }}
         port: "21"
         password: ${{ secrets.PASSWORD }}
-        localDir: "public"
-        serverDir: "public_html"
+        local-dir: "public"
+        server-dir: "public_html"
