--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,6 +24,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Use Node.js 22
+      uses: actions/setup-node@v2
+      with:
+        node-version: '22'
     - run: npm install
     - run: npm run build
     - name: Upload ftp
