--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -36,3 +36,4 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         local-dir: "public/"
         server-dir: "public_html/"
+        timeout: 60000
