--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -39,4 +39,5 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         local-dir: "public/"
         server-dir: "public_html/"
+        timeout: 60000
 
